--- a/horario.css
+++ b/horario.css
@@ -1,29 +1,12 @@
 body {
     font-family: Arial, sans-serif;
-    text-align: center;
     margin: 0;
     padding: 0;
+    text-align: center;
     background-color: #e9e9e9;
 }
 
-.container {
-    width: 80%;
-    margin: 0 auto;
-    padding-top: 20px;
-}
-
-.contact-info {
-    margin-bottom: 20px;
-}
-
-.contact-info h2 {
-    margin-bottom: 5px;
-}
-
-.contact-info p {
-    margin: 0;
-}
-
+/* Estilos para o cabeçalho */
 .header {
     background-color: #007BFF;
     color: white;
@@ -36,6 +19,28 @@ body {
     width: 60px;
     font-weight: bold;
     margin-right: auto;
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 20px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+th,
+td {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: #f2f2f2;
 }
 
 nav ul {
@@ -54,7 +59,7 @@ nav li a {
     text-decoration: none;
 }
 
-/* Estilos para o rodapé */
+
 .footer {
     background-color: #007BFF;
     color: white;
